# ROS_Self_Driving_Car_Sim

./: README.md
perception/: CMakeLists.txt  package.xml
perception/include/perception/: cloud_pixel_fusion.h  grid_cell_costmap.h  perception_node.h  sensor_perception.h
perception/launch/: default.rviz  perception.launch
perception/src/: cloud_pixel_fusion.cpp  grid_cell_costmap.cpp  perception_node.cpp  sensor_perception.cpp
self_driving_car_description/: CMakeLists.txt  package.xml
self_driving_car_description/urdf/: prius.urdf
simulator/: CMakeLists.txt  package.xml
simulator/launch/: city.launch
simulator/launch/config/: vehicle_control.yaml
simulator/models/asphalt_plane/: model-1_4.sdf  model.sdf
simulator/models/asphalt_plane/materials/scripts/: asphalt.material
simulator/models/city_terrain/: model.sdf
simulator/models/custom_road/: model-1_4.sdf  model.config  model.sdf
simulator/models/custom_road/materials/scripts/: customroad.material
simulator/models/ground_plane_reduced/: model-1_4.sdf  model.config  model.sdf
simulator/models/ground_plane_reduced/materials/scripts/: ground.material
simulator/models/max_40_sign/: model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
simulator/models/max_40_sign/materials/scripts/: max40sign.material
simulator/models/pickup/: model.sdf
simulator/models/speed_limit_sign/: model.sdf
simulator/models/stop_light/: model.sdf
simulator/models/stop_light_post/: model.sdf
simulator/models/stop_light_post_alt/: model.sdf
simulator/models/stop_sign/: model-1_3.sdf  model-1_4.sdf  model.sdf
simulator/plugins/: BloomVisualPlugin.cc  BloomVisualPlugin.hh  GazeboRosVelodyneLaser.cpp  PriusHybridPlugin.cc  PriusHybridPlugin.hh
simulator/worlds/: simple_city.world
utils/: CMakeLists.txt  package.xml
utils/msg/: CamInfo.msg  Point.msg
