<?xml version="1.0"?>
<package format="2">
  <name>perception</name>
  <version>0.0.0</version>
  <description>The  package</description>

  
  <maintainer email="fetulahatas1@gmail.com">fetulahatas1</maintainer>


 
  <license>TODO</license>

 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>self_driving_car_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>voxel_grid</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>self_driving_car_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  
  <exec_depend>self_driving_car_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>voxel_grid</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>cv_bridge</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  <build_depend>image_transport</build_depend>
  <build_export_depend>image_transport</build_export_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>tf</exec_depend>

 
</package>
