<package format="2">
  <name>self_driving_car_description</name>
  <version>0.0.1</version>
  <description>
  Provides a URDF for a prius
  </description>
  <maintainer email="fetulahatas1@gmail.com">fetulahatas1</maintainer>
  <license>APACHE 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
</package>
