<package format="2">
  <name>self_driving_car_msgs</name>
  <version>0.0.1</version>
  <description>
  Messages for car      
  </description>
  <maintainer email="fetulahatas1@gmail.com">Fetullah Atas</maintainer>
  <license>APACHE 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
